Adding a junit config to help pass test in linux.